Migrate to java 25