@@ -14,6 +14,8 @@
 # limitations under the License.
 
 native-image \
+-J--sun-misc-unsafe-memory-access=allow \
+--enable-native-access=ALL-UNNAMED \
 -H:+StaticExecutableWithDynamicLibC \
 --initialize-at-build-time=org.slf4j.impl.JDK14LoggerAdapter \
 ${3:+$(echo " $3")} \
